--- a/public/output.css
+++ b/public/output.css
@@ -645,6 +645,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-height: 60px;
 }
 
+.max-h-\[150px\]{
+  max-height: 150px;
+}
+
 .min-h-\[450px\]{
   min-height: 450px;
 }
@@ -681,6 +685,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 1536px;
 }
 
+.max-w-\[150px\]{
+  max-width: 150px;
+}
+
 .basis-3\/6{
   flex-basis: 50%;
 }
@@ -691,10 +699,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .basis-1\/2{
   flex-basis: 50%;
-}
-
-.basis-1\/3{
-  flex-basis: 33.333333%;
 }
 
 .cursor-pointer{
@@ -851,9 +855,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1.5rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .px-6{
@@ -864,11 +868,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-\[18px\]{
   padding-top: 18px;
   padding-bottom: 18px;
-}
-
-.px-7{
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
 }
 
 .text-center{
@@ -1077,7 +1076,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.tqd-badge-circle{
+.ndn-badge-circle{
   border-radius: 9999px;
   padding-left: 0.375rem;
   padding-right: 0.375rem;
@@ -1195,16 +1194,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.product-card{
-  margin-bottom: 0.5rem;
-}
-
-@media (min-width: 640px){
-  .product-card{
-    margin-bottom: 2.5rem;
-  }
-}
-
 .after\:absolute::after{
   content: var(--tw-content);
   position: absolute;
@@ -1276,6 +1265,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:text-lime-500:hover{
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+
+.hover\:text-lime-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(163 230 53 / var(--tw-text-opacity));
 }
 
 .hover\:text-coffee-400:hover{
