--- a/public/output.css
+++ b/public/output.css
@@ -504,6 +504,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.visible{
+  visibility: visible;
+}
+
 .fixed{
   position: fixed;
 }
@@ -544,6 +548,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: calc(-50vw + 50%);
 }
 
+.bottom-10{
+  bottom: 2.5rem;
+}
+
+.bottom-\[170px\]{
+  bottom: 170px;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-\[130px\]{
+  top: 130px;
+}
+
+.left-\[45px\]{
+  left: 45px;
+}
+
+.left-\[43px\]{
+  left: 43px;
+}
+
+.left-\[42px\]{
+  left: 42px;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -560,8 +592,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 40;
 }
 
+.z-0{
+  z-index: 0;
+}
+
+.z-30{
+  z-index: 30;
+}
+
 .row-start-1{
   grid-row-start: 1;
+}
+
+.m-2{
+  margin: 0.5rem;
 }
 
 .mx-auto{
@@ -635,8 +679,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 4rem;
 }
 
-.mt-\[84px\]{
-  margin-top: 84px;
+.mt-\[140px\]{
+  margin-top: 140px;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .flex{
@@ -679,8 +727,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 350px;
 }
 
-.h-\[660px\]{
-  height: 660px;
+.h-\[550px\]{
+  height: 550px;
+}
+
+.h-\[90\%\]{
+  height: 90%;
+}
+
+.h-\[30px\]{
+  height: 30px;
 }
 
 .max-h-\[60px\]{
@@ -689,6 +745,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-h-\[150px\]{
   max-height: 150px;
+}
+
+.max-h-20{
+  max-height: 5rem;
 }
 
 .min-h-\[450px\]{
@@ -723,8 +783,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 95%;
 }
 
-.min-w-\[375px\]{
-  min-width: 375px;
+.w-80{
+  width: 20rem;
+}
+
+.w-\[35px\]{
+  width: 35px;
+}
+
+.min-w-\[350px\]{
+  min-width: 350px;
+}
+
+.min-w-\[335px\]{
+  min-width: 335px;
 }
 
 .max-w-screen-2xl{
@@ -747,8 +819,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   flex-basis: 50%;
 }
 
+.basis-1\/3{
+  flex-basis: 33.333333%;
+}
+
+.basis-2\/3{
+  flex-basis: 66.666667%;
+}
+
+.basis-1\/4{
+  flex-basis: 25%;
+}
+
+.basis-3\/4{
+  flex-basis: 75%;
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.resize{
+  resize: both;
 }
 
 .grid-cols-1{
@@ -815,8 +907,90 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 0.5rem;
 }
 
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-9{
+  gap: 2.25rem;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border-\[1px\]{
+  border-width: 1px;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-4{
+  border-width: 4px;
+}
+
+.border-solid{
+  border-style: solid;
+}
+
+.border-dotted{
+  border-style: dotted;
+}
+
+.border-\[\#84cc16\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(132 204 22 / var(--tw-border-opacity));
+}
+
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-gray-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-opacity-90{
+  --tw-border-opacity: 0.9;
+}
+
+.border-opacity-70{
+  --tw-border-opacity: 0.7;
 }
 
 .bg-white{
@@ -839,9 +1013,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500{
+.bg-lime-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(190 242 100 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f9feff\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 254 255 / var(--tw-bg-opacity));
+}
+
+.bg-lime-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 230 53 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-slate-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -892,6 +1091,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: url(./img/overview.jpg);
 }
 
+.bg-\[url\(\.\/img\/logo-ndt\.jpg\)\]{
+  background-image: url(./img/logo-ndt.jpg);
+}
+
+.bg-\[url\(\.\/img\/logo-kn\.jpg\)\]{
+  background-image: url(./img/logo-kn.jpg);
+}
+
+.bg-\[url\(\.\/img\/logo-vlb\.jpg\)\]{
+  background-image: url(./img/logo-vlb.jpg);
+}
+
+.bg-\[url\(\.\/img\/logo-krt\.jpg\)\]{
+  background-image: url(./img/logo-krt.jpg);
+}
+
+.bg-\[url\(\.\/img\/logo-fbc\.jpg\)\]{
+  background-image: url(./img/logo-fbc.jpg);
+}
+
+.bg-\[url\(\.\/img\/logo-cl\.jpg\)\]{
+  background-image: url(./img/logo-cl.jpg);
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -911,6 +1134,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-8{
+  padding: 2rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .py-6{
@@ -940,6 +1175,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-1{
   padding-left: 0.25rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pb-14{
+  padding-bottom: 3.5rem;
 }
 
 .text-center{
@@ -1025,6 +1276,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
+.leading-6{
+  line-height: 1.5rem;
+}
+
 .tracking-widest{
   letter-spacing: 0.1em;
 }
@@ -1034,14 +1289,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(132 204 22 / var(--tw-text-opacity));
 }
 
-.text-yellow-600{
-  --tw-text-opacity: 1;
-  color: rgb(202 138 4 / var(--tw-text-opacity));
-}
-
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-yellow-400{
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .text-blue-600{
@@ -1113,6 +1368,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1125,6 +1386,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition{
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .top-menu-item{
@@ -1258,8 +1527,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ndn-button-page{
   border-radius: 9999px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-top: 18px;
@@ -1347,6 +1614,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@-webkit-keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.hover\:animate-pulse:hover{
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.hover\:cursor-pointer:hover{
+  cursor: pointer;
+}
+
 .hover\:bg-slate-200:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -1362,6 +1650,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-lime-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 249 157 / var(--tw-bg-opacity));
+}
+
 .hover\:text-coffee-600:hover{
   --tw-text-opacity: 1;
   color: rgb(116 72 56 / var(--tw-text-opacity));
@@ -1375,6 +1668,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:text-lime-400:hover{
   --tw-text-opacity: 1;
   color: rgb(163 230 53 / var(--tw-text-opacity));
+}
+
+.hover\:text-black:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-10:hover{
@@ -1435,6 +1733,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 500px;
   }
 
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
@@ -1474,6 +1776,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:h-auto{
+    height: auto;
+  }
+
+  .lg\:h-\[1500px\]{
+    height: 1500px;
   }
 
   .lg\:min-h-\[350px\]{
@@ -1520,6 +1830,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     gap: 7rem;
   }
 
+  .lg\:gap-\[165px\]{
+    gap: 165px;
+  }
+
+  .lg\:gap-\[90px\]{
+    gap: 90px;
+  }
+
   .lg\:px-24{
     padding-left: 6rem;
     padding-right: 6rem;
@@ -1538,5 +1856,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 @media (min-width: 1280px){
   .xl\:w-\[65\%\]{
     width: 65%;
+  }
+
+  .xl\:w-\[70\%\]{
+    width: 70%;
+  }
+
+  .xl\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
